[gd_scene format=3 uid="uid://c61od4a1i2eth"]

[ext_resource type="Theme" uid="uid://bl83ik5enqoyy" path="res://menu/menu_theme.tres" id="1_2j7bf"]
[ext_resource type="Script" uid="uid://d2fq6hc21mswx" path="res://menu/settings.gd" id="2_fqw17"]

[node name="Settings" type="Control" unique_id=577224066]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2j7bf")
script = ExtResource("2_fqw17")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1866838268]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.94, 0.94, 0.94, 1)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1754424481]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Control" type="Control" parent="MarginContainer" unique_id=25489368]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/Control" unique_id=492411169]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -230.5
offset_right = 230.5
offset_bottom = 120.0
grow_horizontal = 2
pivot_offset_ratio = Vector2(0.5, 0)
theme_override_font_sizes/font_size = 100
text = "Settings"
horizontal_alignment = 1

[node name="Checkboxes" type="VBoxContainer" parent="MarginContainer/Control" unique_id=505043305]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -141.5
offset_right = 500.0
offset_bottom = 141.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_constants/separation = 20

[node name="Sound" type="CheckBox" parent="MarginContainer/Control/Checkboxes" unique_id=862112281]
unique_name_in_owner = true
layout_mode = 2
text = "Play sounds"

[node name="DiagonalArrows" type="CheckBox" parent="MarginContainer/Control/Checkboxes" unique_id=851021721]
unique_name_in_owner = true
layout_mode = 2
text = "Diagonal ‚ê§ movement"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/Checkboxes" unique_id=159660354]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = -20

[node name="Label" type="Label" parent="MarginContainer/Control/Checkboxes/MarginContainer" unique_id=123278382]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Each arrow key moves you diagonally,
following the grid lines of the level."

[node name="TouchUI" type="CheckBox" parent="MarginContainer/Control/Checkboxes" unique_id=1093554236]
unique_name_in_owner = true
layout_mode = 2
text = "Always show touch controls"

[node name="OK" type="Button" parent="MarginContainer/Control" unique_id=1568981475]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -89.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset_ratio = Vector2(1, 1)
text = "OK"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="MarginContainer/Control/Checkboxes/Sound" to="." method="_on_sound_toggled"]
[connection signal="toggled" from="MarginContainer/Control/Checkboxes/DiagonalArrows" to="." method="_on_diagonal_arrows_toggled"]
[connection signal="toggled" from="MarginContainer/Control/Checkboxes/TouchUI" to="." method="_on_touch_ui_toggled"]
[connection signal="pressed" from="MarginContainer/Control/OK" to="." method="_on_ok_pressed"]
